contrato cnpj em andamento+++

--- a/projeto/emprestimo/templates/emprestimo_contrato.html
+++ b/projeto/emprestimo/templates/emprestimo_contrato.html
@@ -470,9 +470,9 @@ window.onload = function imprimir(){
         </div>
 
         <div class="paragrafo" > 
-        Por este instrumento particular, as partes acima qualificadas, justas e acertadas, celebram o 
-        presente <strong>CONTRATO DE MÚTUO FINANCEIRO</strong>, que se regerá pelo art. 586, do Código Civil Brasileiro, 
-        pela Lei Complementar nº 167/2019 e pelas cláusulas e condições abaixo descritas:
+            Por este instrumento particular, as partes acima qualificadas, justas e acertadas, celebram o 
+            presente <strong>CONTRATO DE MÚTUO FINANCEIRO</strong>, que se regerá pelo art. 586, do Código Civil Brasileiro, 
+            pela Lei Complementar nº 167/2019 e pelas cláusulas e condições abaixo descritas:
         </div> 
 
         <div class="paragrafo" >
@@ -480,43 +480,109 @@ window.onload = function imprimir(){
         </div>
 
         <div class="paragrafo" >
-        <strong> CLÁUSULA1ª. </strong> A integralidade do crédito é composta da seguinte forma: Valor 
-        mutuado R$ 503,14, Taxa de Juros a.m (9,50)%, taxa de juros moratório 0,66% ao dia, multa por 
-        atraso: 2%, IOF Adicional ( 1,90), IOF diário (1,24), valor do IOF total: R$ 3,14, Valor total 
-        devido: R$ 646,53.
+            <strong> CLÁUSULA1ª. </strong> A integralidade do crédito é composta da seguinte forma: Valor 
+            mutuado R$ 503,14, Taxa de Juros a.m (9,50)%, taxa de juros moratório 0,66% ao dia, multa por 
+            atraso: 2%, IOF Adicional ( 1,90), IOF diário (1,24), valor do IOF total: R$ 3,14, Valor total 
+            devido: R$ 646,53.
         </div>
         <div class="paragrafo" >
             <strong> DO CRÉDITO </strong>            
         </div>
         <div class="paragrafo" >
-        <strong> CLÁUSULA 2ª. </strong> A CONTRATADA MUTUANTE concedeu à CONTRATANTE MUTUÁRIA um empréstimo no valor descrito na cláusula 1ª – Composição do Crédito, que será restituído nas épocas próprias e nas condições fixadas neste CONTRATO
-        CLÁUSULA 3ª. A restituição do valor mutuado, pela CONTRATANTE MUTUÁRIA, será feito conforme Cronograma de Reembolso acima.  
-        DA FORMA E PRAZO DE PAGAMENTO 
-        CLÁUSULA 4ª. A CONTRATANTE MUTUÁRIA fica obrigada a pagar à CONTRATADA MUTUANTE, nas datas especificadas no Quadro 02 – Cronograma de Reembolso, o valor correspondente ao saldo devedor principal acrescido dos encargos financeiros pactuados e demais acessórios, quando houver. 
-        DO PAGAMENTO ANTECIPADO 
-        CLÁUSULA 5ª. A CONTRATANTE MUTUÁRIA poderá amortizar ou liquidar o débito antecipadamente, a qualquer tempo, com incidência de desconto, nos encargos, em até o limite de aproximadamente, cinquenta por cento dos valores correspondentes ao que deveria pagar na normalidade do contrato sem antecipação, a depender de cada caso.  
-
-        DO VENCIMENTO ANTECIPADO DA DÍVIDA 
-        CLÁUSULA 6ª. Em caso de não pagamento pontual das parcelas devidas, a CONTRATADA MUTUANTE poderá considerar vencidas antecipadamente, de pleno direito, todas as demais parcelas ainda vincendas, exigindo o pagamento total da dívida independentemente de aviso extrajudicial ou interpelação judicial. Também poderá ser considerada integralmente vencida e exigível a dívida: 
-        a) no caso de apuração de falsidade, fraude ou inexatidão de qualquer declaração, informação ou documento que houver sido prestador ou apresentado pela CONTRATANTE MUTUÁRIA, seus representantes legais e/ou garantidores;
-        b) caso a CONTRATANTE MUTUÁRIA ajuizar pedido de falência ou recuperação judicial.  
-        DOS ENCARGOS FINANCEIROS
-        CLÁUSULA 7ª.  Sobre a valor mutuado incidirá juros conforme cláusula 1ª – Composição do Crédito, os quais serão calculados de forma exponencial, com capitalização diária baseada em um ano de 365 (trezentos e sessenta e cinco) dias.  
-        CLÁUSULA 8ª.  Na operação não incidirá qualquer valor relativo a tarifas ou taxas de empréstimo.
-        DO INADIMPLEMENTO 
-        CLÁUSULA 9ª. Em caso de descumprimento de qualquer obrigação legal ou convencional, ou no caso de vencimento antecipado da operação, serão exigidos, a partir do inadimplemento, calculados sobre o salvo devedor, capitalizados diariamente e devidos cumulativamente, os encargos financeiros a seguir: 
+            <strong> CLÁUSULA 2ª. </strong> A CONTRATADA MUTUANTE concedeu à CONTRATANTE MUTUÁRIA um 
+            empréstimo no valor descrito na cláusula 1ª – Composição do Crédito, que será restituído nas 
+            épocas próprias e nas condições fixadas neste CONTRATO 
+        </div>
+        <div class="paragrafo" >
+            <strong> CLÁUSULA 3ª. </strong> A restituição do valor mutuado, pela <strong> CONTRATANTE MUTUÁRIA</strong>, 
+            será feito conforme Cronograma de Reembolso acima.  
+        </div>
+        <div class="paragrafo" >
+            <strong> DA FORMA E PRAZO DE PAGAMENTO </strong>
+        </div>
+        <div class="paragrafo" >
+            <strong> CLÁUSULA 4ª. </strong> A <strong> CONTRATANTE MUTUÁRIA </strong>fica obrigada a pagar à CONTRATADA MUTUANTE, 
+            nas datas especificadas no Quadro 02 – Cronograma de Reembolso, o valor correspondente ao saldo devedor principal 
+            acrescido dos encargos financeiros pactuados e demais acessórios, quando houver.
+        </div>
+        <div class="paragrafo" >
+            <strong> DO PAGAMENTO ANTECIPADO </strong>
+        </div>
+        <div class="paragrafo" >
+            <strong> CLÁUSULA 5ª. </strong> A <strong> CONTRATANTE MUTUÁRIA </strong> poderá amortizar ou liquidar o débito 
+            antecipadamente, a qualquer tempo, com incidência de desconto, nos encargos, em até o limite de aproximadamente, 
+            cinquenta por cento dos valores correspondentes ao que deveria pagar na normalidade do contrato sem antecipação, 
+            a depender de cada caso.  
+        </div>
+        <div class="paragrafo" >
+            <strong> DO VENCIMENTO ANTECIPADO DA DÍVIDA </strong>
+        </div>
+        <div class="paragrafo" >
+            <strong> CLÁUSULA 6ª. </strong>Em caso de não pagamento pontual das parcelas devidas, a 
+            <strong> CONTRATADA MUTUANTE </strong> poderá considerar vencidas antecipadamente, de pleno direito, 
+            todas as demais parcelas ainda vincendas, exigindo o pagamento total da dívida independentemente de 
+            aviso extrajudicial ou interpelação judicial. Também poderá ser considerada integralmente 
+            vencida e exigível a dívida: 
+        </div>
+        <div class="paragrafo" >
+            <strong> a) </strong>no caso de apuração de falsidade, fraude ou inexatidão de qualquer declaração, informação ou documento que 
+            houver sido prestador ou apresentado pela <strong> CONTRATANTE MUTUÁRIA </strong>, seus representantes legais e/ou garantidores;
+        </div>
+        <div class="paragrafo" >
+            <strong> b) </strong>caso a <strong> CONTRATANTE MUTUÁRIA </strong>ajuizar pedido de falência ou recuperação judicial.  
+        </div>
+        <div class="paragrafo" >
+            <strong> DOS ENCARGOS FINANCEIROS </strong>
+        </div>
+        <div class="paragrafo" >
+            <strong> CLÁUSULA 7ª. </strong>  Sobre a valor mutuado incidirá juros conforme cláusula 1ª – Composição do Crédito, os quais serão 
+            calculados de forma exponencial, com capitalização diária baseada em um ano de 365 (trezentos e sessenta e cinco) dias.  
+        </div>
+        <div class="paragrafo" >            
+            <strong> CLÁUSULA 8ª. </strong>  Na operação não incidirá qualquer valor relativo a tarifas ou taxas de empréstimo.
+        </div>
+        <div class="paragrafo" >
+            <strong> DO INADIMPLEMENTO </strong>
+        </div>
+        <div class="paragrafo" >
+            <strong>CLÁUSULA 9ª. </strong>Em caso de descumprimento de qualquer obrigação legal ou convencional, ou no caso de vencimento 
+            antecipado da operação, serão exigidos, a partir do inadimplemento, calculados sobre o salvo devedor, capitalizados 
+            diariamente e devidos cumulativamente, os encargos financeiros a seguir: 
             I- atualização monetária pelo INPC-IBGE;
             II-  juros remuneratórios, à taxa contratada no período de normalidade contratual;
             III- juros de mora de 0,66% ao dia;
             IV- multa de 2% (dois por cento) sobre o valor da parcela não paga. 
-        Parágrafo único.  Em caso de cobrança judicial e/ou extrajudicial serão devidas custas, emolumentos e honorários advocatícios, estes fixados em 10% (dez por cento) sobre o valor total devido. 
-        CLÁUSULA 10ª. A constituição em mora ocorrerá independentemente de qualquer aviso ou notificação, resultando do simples descumprimento das obrigações previstas neste CONTRATO. 
-        DAS GARANTIAS 
-        CLÁUSULA 11. Para garantir o cumprimento das obrigações deste CONTRATO, são constituídas em favor da CONTRATADA MUTUANTE a(s) garantia(s) referida(s) no Quadro 03 – Garantia(s), quando houver. 
-        CLÁUSULA 12ª. As obrigações constituídas por este instrumento são extensivas e obrigatórias aos herdeiros, sucessores e cessionários ou promitentes cessionários da CONTRATANTE MUTUÁRIA. E na impossibilidade de adimplemento pela pessoa jurídica o débito será de responsabilidade da pessoa física titular da mesma, inclusive em caso de falecimento até o limite do patrimônio transferido.  
+        </div>
+        <div class="paragrafo" >
+            <strong> Parágrafo único. </strong> Em caso de cobrança judicial e/ou extrajudicial serão devidas custas, emolumentos e 
+            honorários advocatícios, estes fixados em 10% (dez por cento) sobre o valor total devido. 
+        </div>
+        <div class="paragrafo" >
+            <strong> CLÁUSULA 10ª. </strong> A constituição em mora ocorrerá independentemente de qualquer aviso ou notificação, resultando 
+            do simples descumprimento das obrigações previstas neste <strong> CONTRATO </strong> . 
+        </div>
+        <div class="paragrafo" >
+            <strong> DAS GARANTIAS </strong>
+        </div>
+        <div class="paragrafo" >
+            <strong> CLÁUSULA 11. </strong> Para garantir o cumprimento das obrigações deste CONTRATO, são constituídas em favor da 
+            CONTRATADA MUTUANTE a(s) garantia(s) referida(s) no Quadro 03 – Garantia(s), quando houver. 
+        </div>
+        <div class="paragrafo" >
+            <strong> CLÁUSULA 12ª. </strong> As obrigações constituídas por este instrumento são extensivas e obrigatórias aos herdeiros, 
+            sucessores e cessionários ou promitentes cessionários da <strong> CONTRATANTE MUTUÁRIA </strong> . E na impossibilidade de 
+            adimplemento pela pessoa jurídica o débito será de responsabilidade da pessoa física titular da mesma, 
+            <strong> inclusive em caso de falecimento até o limite do patrimônio transferido </strong>.  
+        </div>
+        <div class="paragrafo" >
+            <strong> CLÁUSULA 13ª. </strong> Independentemente da modalidade de garantia ofertada – quando houver - a 
+            <strong> CONTRATANTE MUTUÁRIA </strong> obriga-se a pagar o saldo remanescente, caso a importância 
+            recebida na realização da garantia não seja suficiente para pagar o crédito da 
+            <strong> CONTRATADA MUTUANTE </strong>, bem como as demais despesas previstas neste <strong> CONTRATO </strong>. 
+        </div>
+        
 
 
-        CLÁUSULA 13ª. Independentemente da modalidade de garantia ofertada – quando houver - a CONTRATANTE MUTUÁRIA obriga-se a pagar o saldo remanescente, caso a importância recebida na realização da garantia não seja suficiente para pagar o crédito da CONTRATADA MUTUANTE, bem como as demais despesas previstas neste CONTRATO. 
         CLÁUSULA 14ª. A CONTRATANTE MUTUÁRIA declara que as garantias ofertadas – quando houver - estão livres de quaisquer ônus, dividas e/ou gravames de qualquer natureza, assim devendo permanecer até a liquidação da dívida, sob pena de caracterização de fraude, bem como vencimento antecipado da dívida. 
         DO DEVEDOR SOLIDÁRIO E DO FIADOR – QUANDO HOUVER
         CLÁUSULA 15ª. Assina(m) este CONTRATO na qualidade fiador(es) com obrigação sobre a totalidade da dívida principal e acessórias, se houver, na forma da legislação pertinente, a(s) pessoa(s), todos na qualidade de garantidores, conforme descrito no Quadro 01 – Parte, Item III. Assina também o presente contrato o Fiador qualificado no Quadro Resumo, como principal pagador, solidariamente responsável pelo fiel cumprimento de todas as obrigações, inclusive as acessórias e encargos em geral. 
@@ -546,6 +612,9 @@ window.onload = function imprimir(){
         ______________________________________________________________
         ESCTOP - EMPRESA SIMPLES DE CREDITO LTDA 35.297.061/0001-47
         CONTRATADA MUTUANTE
+        </div>
+
+        <div class="paragrafo" >
         </div>
             
         `
