contrato cnpj com cláusulas inseridas

--- a/projeto/emprestimo/templates/emprestimo_contrato.html
+++ b/projeto/emprestimo/templates/emprestimo_contrato.html
@@ -580,28 +580,72 @@ window.onload = function imprimir(){
             recebida na realização da garantia não seja suficiente para pagar o crédito da 
             <strong> CONTRATADA MUTUANTE </strong>, bem como as demais despesas previstas neste <strong> CONTRATO </strong>. 
         </div>
+        <div class="paragrafo" >
+            <strong> CLÁUSULA 14ª. </strong> A <strong> CONTRATANTE MUTUÁRIA </strong> declara que as garantias ofertadas – 
+            quando houver - estão livres de quaisquer ônus, dividas e/ou gravames de qualquer natureza, assim devendo 
+            permanecer até a liquidação da dívida, sob pena de caracterização de fraude, bem como vencimento antecipado da dívida. 
+        </div>
+        <div class="paragrafo" >
+            <strong> DO DEVEDOR SOLIDÁRIO E DO FIADOR – QUANDO HOUVER </strong>
+        </div>
+        <div class="paragrafo" >
+            <strong> CLÁUSULA 15ª </strong>. Assina(m) este <strong> CONTRATO </strong> na qualidade fiador(es) com obrigação 
+            sobre a totalidade da dívida principal e acessórias, se houver, na forma da legislação pertinente, a(s) pessoa(s), 
+            todos na qualidade de garantidores, conforme descrito no Quadro 01 – Parte, Item III. Assina também o presente 
+            contrato o Fiador qualificado no Quadro Resumo, como principal pagador, solidariamente responsável pelo fiel 
+            cumprimento de todas as obrigações, inclusive as acessórias e encargos em geral. 
+        </div>
+        <div class="paragrafo" >
+            <strong> DA COBRANÇA TERCEIRIZADA </strong>
+        </div>
+        <div class="paragrafo" >
+            <strong> CLÁUSULA 16ª </strong>. Em caso de inadimplemento deste <strong> CONTRATO </strong>, a 
+            <strong> CONTRATADA MUTUANTE </strong> poderá realizar, a seu critério, 
+            cobrança por meio de empresa terceirizada, seja no âmbito de telecobrança ou cobrança especializada.
+        </div>
+        <div class="paragrafo" >
+            <strong> DAS DISPOSIÇÕES GERAIS </strong>
+        </div>
+        <div class="paragrafo" >            
+            <strong> CLÁUSULA 17ª </strong>. A tolerância de uma das partes, quanto ao inadimplemento das obrigações assumidas pela outra, 
+            não implica em novação ou modificação das cláusulas aqui ajustadas, constituindo-se mera liberalidade.
+        </div>
+        <div class="paragrafo" >
+            <strong> CLÁUSULA 18ª </strong>. A <strong> CONTRATANTE MUTUÁRIA </strong>, seus representantes legais e/ou garantidores asseguram a veracidade de 
+            todas as informações passadas à <strong> CONTRATADA MUTUANTE </strong>, especialmente acerca da licitude da origem da renda e 
+            patrimônio, bem como declaram estar cientes das disposições previstas na Lei n° 9.613/98. 
+        </div>
+        <div class="paragrafo" >
+            <strong> CLÁUSULA 19ª </strong>. A <strong> CONTRATANTE MUTUÁRIA </strong> se compromete a informar à 
+            <strong> CONTRATADA MUTUANTE </strong> sobre eventuais alterações 
+            em seus dados cadastrais, sendo de sua responsabilidade todas as consequências decorrentes do descumprimento dessa 
+            obrigação. A <strong> CONTRATADA MUTUANTE </strong>poderá, sempre que necessário, solicitar a atualização dos dados cadastrais 
+            das partes envolvidas neste CONTRATO, inclusive do(s) garantidor(es) e fiadores quando houver.
+        </div>
+        <div class="paragrafo" >
+            <strong> CLÁUSULA 20ª </strong>. A <strong> CONTRATANTE MUTUÁRIA </strong>autoriza a <strong> CONTRATADA MUTUANTE </strong> a:<br>  
+                I- transmitir e consultar informações, inclusive as relativas a esta operação de Empréstimo, à Centrais de Risco de Crédito, 
+                podendo utilizá-las para análise de capacidade de crédito;<br> 
+                II- fornecer tais informações a terceiros contratados para prestar serviços de controle e cobrança, por quaisquer meios, 
+                das obrigações assumidas neste <strong> CONTRATO </strong>;<br> 
+                III- levar a registro este <strong> CONTRATO </strong>em Entidade Registradora autorizada pelo Banco Central; e <br> 
+                IV- em caso de inadimplência, inserir seu nome e de seus garantidores nos cadastros de proteção ao crédito.
+        </div>
+        <div class="paragrafo" >
+            <strong> CLÁUSULA 21 </strong>. A <strong> CONTRATADA MUTUANTE </strong> declara estar sujeita à mecanismos de controle para fins de prevenção contra 
+            lavagem de dinheiro e ao dever de comunicação ao Conselho de Controle de Atividades Financeiras (COAF) de 
+            operações que possam estar configuradas na Lei nº 9.613/98 (Lei de Lavagem de Dinheiro) e demais leis pertinentes.
+        </div>
+        <div class="paragrafo" >
+            <strong>DO FORO DE ELEIÇÃO </strong>
+        </div>
+        <div class="paragrafo" >
+            <strong> CLÁUSULA 22 </strong>. As partes elegem o foro da sede da <strong> CONTRATADA MUTUANTE </strong> para solucionar qualquer controvérsia decorrente 
+            deste contrato, com renúncia expressa a qualquer outro, por mais privilegiado que seja.  
+            E, por estarem assim justas e acertadas, firmam o presente instrumento em 02 (duas) vias de igual teor, para que surta 
+            seus efeitos legais, podendo ser requeridas a presença de testemunha (s).
+        </div>
         
-
-
-        CLÁUSULA 14ª. A CONTRATANTE MUTUÁRIA declara que as garantias ofertadas – quando houver - estão livres de quaisquer ônus, dividas e/ou gravames de qualquer natureza, assim devendo permanecer até a liquidação da dívida, sob pena de caracterização de fraude, bem como vencimento antecipado da dívida. 
-        DO DEVEDOR SOLIDÁRIO E DO FIADOR – QUANDO HOUVER
-        CLÁUSULA 15ª. Assina(m) este CONTRATO na qualidade fiador(es) com obrigação sobre a totalidade da dívida principal e acessórias, se houver, na forma da legislação pertinente, a(s) pessoa(s), todos na qualidade de garantidores, conforme descrito no Quadro 01 – Parte, Item III. Assina também o presente contrato o Fiador qualificado no Quadro Resumo, como principal pagador, solidariamente responsável pelo fiel cumprimento de todas as obrigações, inclusive as acessórias e encargos em geral. 
-        DA COBRANÇA TERCEIRIZADA 
-        CLÁUSULA 16ª. Em caso de inadimplemento deste CONTRATO, a CONTRATADA MUTUANTE poderá realizar, a seu critério, cobrança por meio de empresa terceirizada, seja no âmbito de telecobrança ou cobrança especializada.
-        DAS DISPOSIÇÕES GERAIS 
-        CLÁUSULA 17ª. A tolerância de uma das partes, quanto ao inadimplemento das obrigações assumidas pela outra, não implica em novação ou modificação das cláusulas aqui ajustadas, constituindo-se mera liberalidade.
-        CLÁUSULA 18ª. A CONTRATANTE MUTUÁRIA, seus representantes legais e/ou garantidores asseguram a veracidade de todas as informações passadas à CONTRATADA MUTUANTE, especialmente acerca da licitude da origem da renda e patrimônio, bem como declaram estar cientes das disposições previstas na Lei n° 9.613/98. 
-        
-        CLÁUSULA 19ª. A CONTRATANTE MUTUÁRIA se compromete a informar à CONTRATADA MUTUANTE sobre eventuais alterações em seus dados cadastrais, sendo de sua responsabilidade todas as consequências decorrentes do descumprimento dessa obrigação. A CONTRATADA MUTUANTE poderá, sempre que necessário, solicitar a atualização dos dados cadastrais das partes envolvidas neste CONTRATO, inclusive do(s) garantidor(es) e fiadores quando houver.
-        CLÁUSULA 20ª. A CONTRATANTE MUTUÁRIA autoriza a CONTRATADA MUTUANTE a:  
-            I- transmitir e consultar informações, inclusive as relativas a esta operação de Empréstimo, à Centrais de Risco de Crédito, podendo utilizá-las para análise de capacidade de crédito;
-            II- fornecer tais informações a terceiros contratados para prestar serviços de controle e cobrança, por quaisquer meios, das obrigações assumidas neste CONTRATO;
-            III- levar a registro este CONTRATO em Entidade Registradora autorizada pelo Banco Central; e 
-            IV- em caso de inadimplência, inserir seu nome e de seus garantidores nos cadastros de proteção ao crédito.
-        CLÁUSULA 21. A CONTRATADA MUTUANTE declara estar sujeita à mecanismos de controle para fins de prevenção contra lavagem de dinheiro e ao dever de comunicação ao Conselho de Controle de Atividades Financeiras (COAF) de operações que possam estar configuradas na Lei nº 9.613/98 (Lei de Lavagem de Dinheiro) e demais leis pertinentes.
-        DO FORO DE ELEIÇÃO 
-        CLÁUSULA 22. As partes elegem o foro da sede da CONTRATADA MUTUANTE para solucionar qualquer controvérsia decorrente deste contrato, com renúncia expressa a qualquer outro, por mais privilegiado que seja.  
-        E, por estarem assim justas e acertadas, firmam o presente instrumento em 02 (duas) vias de igual teor, para que surta seus efeitos legais, podendo ser requeridas a presença de testemunha (s).
 
         Natal-RN, 09 de Junho de 2020.
         
