contrato finalizado(sem cálculos de iof e demais)

--- a/projeto/emprestimo/templates/emprestimo_contrato.html
+++ b/projeto/emprestimo/templates/emprestimo_contrato.html
@@ -646,21 +646,20 @@ window.onload = function imprimir(){
             seus efeitos legais, podendo ser requeridas a presença de testemunha (s).
         </div>
         
-
-        Natal-RN, 09 de Junho de 2020.
-        
-        ____________________________________________________________
-        REGINA MARIA DE FRANÇA 031.585.554-17
-        CONTRATANTE MUTUÁRIA
-
-        ______________________________________________________________
-        ESCTOP - EMPRESA SIMPLES DE CREDITO LTDA 35.297.061/0001-47
-        CONTRATADA MUTUANTE
+        <div class="paragrafo" style="text-align:center">
+            Natal-RN, 09 de Junho de 2020.
         </div>
 
-        <div class="paragrafo" >
+        <div class="paragrafo" style="text-align:center">
+            ____________________________________________________________<br>
+            <strong> REGINA MARIA DE FRANÇA 031.585.554-17 </strong><br>
+            CONTRATANTE MUTUÁRIA            
         </div>
-            
+        <div class="paragrafo" style="text-align:center">
+            ______________________________________________________________<br>
+            <strong>ESCTOP - EMPRESA SIMPLES DE CREDITO LTDA 35.297.061/0001-47</strong><br>
+            CONTRATADA MUTUANTE
+        </div>
         `
         
     }
