cabeçalho contrato cnpj alinhado+

--- a/projeto/emprestimo/templates/emprestimo_contrato.html
+++ b/projeto/emprestimo/templates/emprestimo_contrato.html
@@ -28,7 +28,7 @@
     h2{
         text-align: center;
         padding: 10px;  
-        border: 1px solid black;
+        text-decoration: underline;
     }
     .fontmenor{
         font-size: 18px;
@@ -45,6 +45,8 @@
         position: absolute;
         font-size: 17px; 
         text-align:center;
+        border: 1px solid black;
+        border-collapse:initial
     }    
     div.credito{        
         word-break: normal;
@@ -54,7 +56,9 @@
         top: 75px;
         position: absolute;
         font-size: 17px;
-        text-align:center;      
+        text-align:center;    
+        border: 1px solid black;
+        border-collapse:initial
     }    
     div.quadro {
         word-break: normal;   
