--- a/projeto/emprestimo/templates/emprestimo_form.html
+++ b/projeto/emprestimo/templates/emprestimo_form.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% load static %}
 {% load widget_tweaks %}
+{% block js %}{% endblock js %}
+
 
 <!--  -->
 <!-- ESTUDO COMPLETO DE FORMSET -->
@@ -40,7 +42,7 @@
         <div class="col-sm-3"> 
                 <div class="form-group">
                     <label for="">{{form.valor_emprestado.label}}</label>
-                    {% render_field form.valor_emprestado class="form-control" id="valor_emprestado"  onblur="somar()"%}                       
+                    {% render_field form.valor_emprestado class="form-control" id="valor_emprestado" onblur="somar()"%}                       
                 </div>
             </div>
         </div>
@@ -54,73 +56,83 @@
             <div class="col-sm-3" > 
                 <div class="form-group" id="res">
                     <label for="">{{form.valor_prestacao.label}}</label>
-                    {% render_field form.valor_prestacao class="form-control" id="prestacao"%}                       
-                </div>                
+                    {% render_field form.valor_prestacao class="form-control" id="prestacao"%}    
+                                    
+                </div>   
             </div> 
-        {% if object.pk %} <!-- if object.data_emprestimo é isso que ele quer dizer -->           
+            <td >{{object.data_emprestimo.day}}/{{ object.data_emprestimo.month }}/{{ object.data_emprestimo.year }}</td>
+            
+        {% if object.pk %}         
             <div class="col-sm-3"> 
                 <div class="form-group">
                     <label for="">{{form.data_emprestimo.label}}</label>
-                    {% render_field form.data_emprestimo class="form-control" id="data_emprestimo" %}                       
+                    {% render_field form.data_emprestimo class="form-control" id="data_emprestimo"%}                       
                 </div>
             </div>       
         {% else %}            
             <div class="col-sm-3">
                 <div class="form-group">
                     <label for="">{{form.data_emprestimo.label}}</label>   
-                    {% render_field form.data_emprestimo class="form-control" type="date" %} 
-                </div>  
+                    {% render_field form.data_emprestimo class="form-control" type="date"%}                    
+                </div>                  
             </div>            
         {% endif %} 
     </div>
 
     {% if emprestimo %}   
-        <button type="submit" class="btn btn-success">Salvar Alterações</button>     
+        <button type="submit" class="btn btn-success" >Salvar Alterações</button>     
         <a href="{% url 'emprestimo:emprestimo_pagamento_add' emprestimo.pk %}" class="btn btn-primary">Realizar pagamento</a> 
     {% else %}
         <a href="{% url 'emprestimo:emprestimo_list' %}" type="button" class="btn btn-danger">Cancelar</a>        
-        <button type="submit" class="btn btn-success">Cadastrar</button>
+        <button type="submit" class="btn btn-success" >Cadastrar</button>
     </form>
     {% endif %}
-    
-  
-    <script>
-        function toFixed(num, fixed) {
-            var re = new RegExp('^-?\\d+(?:\.\\d{0,' + (fixed || -1) + '})?');
-            return num.toString().match(re)[0];
-        }
+
+<script>
+    function toFixed(num, fixed) {
+        var re = new RegExp('^-?\\d+(?:\.\\d{0,' + (fixed || -1) + '})?');
+        return num.toString().match(re)[0];
+    }
         
-        function somar(){
-            var tvalor_emprestado = document.getElementById('valor_emprestado')
-            var tqtd_parcelas     = document.getElementById('qtd_parcelas')
-            var tprestacao        = document.getElementById('prestacao')
+    function somar(){
+        var tvalor_emprestado = document.getElementById('valor_emprestado')
+        var tqtd_parcelas     = document.getElementById('qtd_parcelas')
+        var tprestacao        = document.getElementById('prestacao')     
 
-            var valor_emprestado  = Number(tvalor_emprestado.value)
-            var qtd_parcelas      = Number(tqtd_parcelas.value)
-            var prestacao         = Number(tprestacao.value)
-            var principal         = valor_emprestado/qtd_parcelas
-             
-            var iof_inicial       = 0
-            var iof_diario        = 0.0041            
-            var qtd_dias          = 30
+        var valor_emprestado   = Number(tvalor_emprestado.value)
+        var qtd_parcelas       = Number(tqtd_parcelas.value)
+        var prestacao          = Number(tprestacao.value)
+        var mes_do_emprestimo  = Number({{object.data_emprestimo.month}})
 
+        var principal         = valor_emprestado/qtd_parcelas
 
+        var iof_inicial       = 0
+        var iof_diario        = 0.0041            
+        var qtd_dias          = 0
 
-            for (var i = 0 ; i < 2; i++){
-                valor_emprestado = Number(valor_emprestado.value)
-                qtd_parcelas = Number(qtd_parcelas.value)    
-                var s = valor_emprestado*qtd_parcelas    
-                iof_inicial = ((principal*(qtd_dias*iof_diario))/100)
-                iof_inicial = toFixed(iof_inicial, 3)
-            }
+        //var meses = new Array(0, 01, 02, 03, 04, 05, 06 ,07, 08, 09, 10, 11)
 
-            var s = "ola"
-
-            document.getElementById('prestacao').value = iof_inicial
-            res.value = iof_inicial
+    for (var i = 0 ; i < 5; i++){
+        if(mes_do_emprestimo == 1 || mes_do_emprestimo == 3 
+        || mes_do_emprestimo == 5 || mes_do_emprestimo == 7 
+        || mes_do_emprestimo == 8 || mes_do_emprestimo == 10 
+        || mes_do_emprestimo == 12){
+            qtd_dias += 31
+        }else{
+            qtd_dias +=30
         }
+        mes_do_emprestimo++
 
-    </script> 
+        iof_inicial = ((principal*(qtd_dias*iof_diario))/100)
+        iof_inicial = toFixed(iof_inicial, 3)
+    }            
+
+    document.getElementById('prestacao').value = qtd_dias
+
+    }
+</script>
+  
+    
 {% endblock content %}
 
 
