--- a/projeto/emprestimo/templates/emprestimo_form.html
+++ b/projeto/emprestimo/templates/emprestimo_form.html
@@ -102,31 +102,39 @@
         var valor_emprestado   = Number(tvalor_emprestado.value)
         var qtd_parcelas       = Number(tqtd_parcelas.value)
         var prestacao          = Number(tprestacao.value)
-        var parcela_por_qtd    = valor_emprestado/qtd_parcelas
+        
+        var principal          = valor_emprestado/qtd_parcelas  
+        //principal = toFixed(principal, 2)
+
         var mes_do_emprestimo  = Number({{object.data_emprestimo.month}})
 
         var iof_inicial       = 0
-        var iof_diario        = 0.0041            
+        var iof_diario        = 0.0041        
         var qtd_dias          = 0
-        var iof_adicional     = 0.0038
+        var iof_adicional     = 0.0038        
+        
 
         //var meses = new Array(0, 01, 02, 03, 04, 05, 06 ,07, 08, 09, 10, 11)
 
-    for (var i = 0 ; i < 2; i++){
+    for (var i = 0 ; i < qtd_parcelas; i++){
 
         if(mes_do_emprestimo == 1 || mes_do_emprestimo == 3 || mes_do_emprestimo == 5 || mes_do_emprestimo == 7 || mes_do_emprestimo == 8 || mes_do_emprestimo == 10 || mes_do_emprestimo == 12){
             qtd_dias += 31
         }else{
             qtd_dias +=30
         }
+
+        iof_inicial += ((principal*(qtd_dias*0.0041))/100)        
+        iof_inicial = Number(toFixed(iof_inicial, 2)) 
+        iof_inicial += principal*iof_adicional
+        iof_inicial = Number(toFixed(iof_inicial, 2)) 
+          
+        
         mes_do_emprestimo++
 
-        iof_inicial += ((parcela_por_qtd*(qtd_dias*iof_diario))/100)
-        iof_inicial += parcela_por_qtd*iof_adicional
-        
-
     }            
-        iof_inicial = toFixed(iof_inicial, 3)
+    
+    
 
     document.getElementById('prestacao').value = iof_inicial
 
