--- a/projeto/emprestimo/templates/emprestimo_form.html
+++ b/projeto/emprestimo/templates/emprestimo_form.html
@@ -111,32 +111,34 @@
         var iof_inicial       = 0
         var iof_diario        = 0.0041        
         var qtd_dias          = 0
-        var iof_adicional     = 0.0038        
-        
+        var iof_adicional     = 0.0038   
 
         //var meses = new Array(0, 01, 02, 03, 04, 05, 06 ,07, 08, 09, 10, 11)
 
+    //CALCULA O IOF_INICIAL (1º PASSO)
     for (var i = 0 ; i < qtd_parcelas; i++){
-
         if(mes_do_emprestimo == 1 || mes_do_emprestimo == 3 || mes_do_emprestimo == 5 || mes_do_emprestimo == 7 || mes_do_emprestimo == 8 || mes_do_emprestimo == 10 || mes_do_emprestimo == 12){
             qtd_dias += 31
         }else{
             qtd_dias +=30
         }
-
         iof_inicial += ((principal*(qtd_dias*0.0041))/100)        
         iof_inicial = Number(toFixed(iof_inicial, 2)) 
         iof_inicial += principal*iof_adicional
-        iof_inicial = Number(toFixed(iof_inicial, 2)) 
-          
-        
+        iof_inicial = Number(toFixed(iof_inicial, 2))
         mes_do_emprestimo++
+    }    
 
-    }            
+    //CALCULA O IOF_REAL (2º PASSO)   
+        var iof_real = 0
+
+        iof_real = (valor_emprestado*iof_inicial)/(valor_emprestado-iof_inicial)
+        iof_real = Number(toFixed(iof_real, 2))
+
     
     
 
-    document.getElementById('prestacao').value = iof_inicial
+    document.getElementById('prestacao').value = iof_real
 
     }
 </script>
