cliente_copia > fiador

--- a/projeto/cliente/templates/cliente_form.html
+++ b/projeto/cliente/templates/cliente_form.html
@@ -332,8 +332,8 @@
         <div class="row">
            <div class="col-sm-5">                    
                 <div class="form-group" >                
-                    <label for="" class="required" >{{form.cliente_copia.label}} </label>        
-                    {% render_field form.cliente_copia class="form-control"  %}
+                    <label for="" class="required" >{{form.fiador.label}} </label>        
+                    {% render_field form.fiador class="form-control"  %}
                 </div>
             </div>
             <br>
