Calculo da parcela sem erros de arredondamento+

--- a/projeto/emprestimo/templates/emprestimo_form.html
+++ b/projeto/emprestimo/templates/emprestimo_form.html
@@ -117,6 +117,7 @@
         }else{
             qtd_dias +=30
         }
+        var aux = 0 
         iof_inicial += ((principal*(qtd_dias*0.0041))/100)        
         iof_inicial = Number(toFixed(iof_inicial, 4)) 
         iof_inicial += principal*iof_adicional
